java sdk updated with java 21 and spring boot 3.2